--- a/index.html
+++ b/index.html
@@ -5,6 +5,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @import url('https://fonts.cdnfonts.com/css/hubot-sans');
+
+        * {
+            box-sizing: border-box;
+            -webkit-font-smoothing: antialiased;
+            text-rendering: optimizeLegibility;
+            scroll-behavior: smooth;
+        }
+
+        html,
+        body {
+            height: 100%;
+        }
+
+        html::-webkit-scrollbar {
+            display: none;
+        }
+
+        html {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+
+        body {
+            margin: 0;
+            font-family: Untitled Sans, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+            background: #05060f linear-gradient(0deg, rgba(216, 236, 248, .06), rgba(152, 192, 239, .06));
+
+            font-size: max(calc(var(--_size) * 0.03), 10px);
+            --_factor: min(600px, 80vh);
+            --_size: min(var(--_factor), 80vw);
+        }
+
+        body.gold .header h2,
+        body.gold p,
+        body.gold>*>* :not(.contact-btn) {
+            filter: invert(1) brightness(4.7);
+        }
+
+        body.gold .header h2 a {
+            filter: hue-rotate(0deg);
+        }
+
+        body.gold canvas {
+            filter: drop-shadow(2em 4em 0px #d8bd10) drop-shadow(-8em -14em 0px #d8bd10);
+        }
+
+        body.gold .header .spotlight {
+            filter: invert(1) brightness(4.7) opacity(0.5);
+        }
+
+        body.gold .mountains>div {
+            box-shadow:
+                -1em -0.2em 0.4em -1.1em #c2ccff,
+                inset 0em 0em 0em 2px #d8a910,
+                inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
+                inset 10.2em 10.3em 2em -10em #d4e6ff2f;
+        }
+
+        body.gold .content-section,
+        body.gold .content-section ::before,
+        body.gold .content-section ::after {
+            filter: invert(1) brightness(4.4) opacity(1);
+        }
+
+        h2 {
+            font-family: 'Hubot-Sans', sans-serif;
+        }
+
+        h2,
+        p {
+            margin: 0;
+            padding: 0;
+        }
+
+        h2 a {
+            text-decoration: none;
+            color: unset;
+        }
+
+        .header {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            color: #bad6f7;
+            padding: 2em;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+
+            opacity: 0;
+            translate: 0 -1em;
+            animation: load 2s ease-in 2s forwards, up 1.4s ease-out 2s forwards;
+        }
+
+        .header> :nth-child(1) {
+            font-size: 1em;
+            position: absolute;
+            left: 0;
+            right: 29em;
+            margin: 0.2em auto;
+            width: fit-content;
+        }
+
+        .header> :nth-child(2) {
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            width: fit-content;
+        }
+
+        .header>h2 {
+            opacity: 0.5;
+            cursor: pointer;
+            transition: opacity 0.04s ease-in-out;
+        }
+
+        .header>h2:hover {
+            opacity: 1;
+            text-shadow: 0 2px 16px rgba(174, 207, 242, 0.6);
+            width: fit-content;
+        }
+
+        .header>div.mid-spot {
+            width: 1.8em;
+            height: 1.8em;
+            border-radius: 50%;
+            background: black;
+            box-shadow: 0 0 1em 0 #98c0ef;
+            cursor: pointer;
+            transition: box-shadow 1s ease-in-out;
+        }
+
+        .header>div.mid-spot:hover {
+            box-shadow: -0.3em 0.1em 0.2em 0 #d8bd10;
+        }
+    </style>
 </head>
 
 <body>
@@ -72,3 +213,4 @@
 </body>
 
 </html>
+    ''',
