--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -290,6 +291,160 @@
             width: 100%;
             overflow: hidden;
         }
+
+        .header .spotlight>div {
+            border-radius: 0 0 50% 50%;
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            top: 3em;
+            width: 30em;
+            height: max(42em, 86vh);
+            background-image: conic-gradient(from 0deg at 50% -5%, transparent 45%, rgba(124, 145, 182, .3) 49%, rgba(124, 145, 182, .5) 50%, rgba(124, 145, 182, .3) 51%, transparent 55%);
+            transform-origin: 50% 0;
+            filter: blur(15px) opacity(0.5);
+            z-index: -1;
+            animation: load 2s ease-in-out forwards, loadrot 2s ease-in-out forwards, spotlight 21s ease-in-out infinite reverse;
+        }
+
+        .header .spotlight>div:nth-child(1) {
+            rotate: 20deg;
+            animation: load 2s ease-in-out forwards, loadrot 2s ease-in-out forwards, spotlight 17s ease-in-out infinite;
+        }
+
+        .header .spotlight>div:nth-child(2) {
+            rotate: -20deg;
+            animation: load 2s ease-in-out forwards, loadrot 2s ease-in-out forwards, spotlight 14s ease-in-out infinite;
+        }
+
+        @keyframes loadrot {
+            0% {
+                rotate: 0deg;
+                scale: 0;
+            }
+
+            100% {
+                scale: 1;
+            }
+        }
+
+        @keyframes spotlight {
+            0% {
+                transform: rotateZ(0deg) scale(1);
+                filter: blur(15px) opacity(0.5);
+            }
+
+            20% {
+                transform: rotateZ(-1deg) scale(1.2);
+                filter: blur(16px) opacity(0.6);
+            }
+
+            40% {
+                transform: rotateZ(2deg) scale(1.3);
+                filter: blur(14px) opacity(0.4);
+            }
+
+            60% {
+                transform: rotateZ(-2deg) scale(1.2);
+                filter: blur(15px) opacity(0.6);
+            }
+
+            80% {
+                transform: rotateZ(1deg) scale(1.1);
+                filter: blur(13px) opacity(0.4);
+            }
+
+            100% {
+                transform: rotateZ(0deg) scale(1);
+                filter: blur(15px) opacity(0.5);
+            }
+        }
+
+        canvas#particleCanvas {
+            position: absolute;
+            pointer-events: none;
+            animation: load 0.4s ease-in-out forwards;
+            z-index: 1;
+            width: 100%;
+        }
+
+        p {
+            font-size: 1.5em;
+        }
+
+        .hero {
+            width: 100%;
+            height: 100%;
+            max-height: 140px;
+            position: absolute;
+            top: 16em;
+        }
+
+        .heroT {
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: auto;
+            height: 20em;
+            padding-top: 2em;
+            translate: 0 -1.6em;
+            opacity: 0;
+            animation: load 2s ease-in-out 0.6s forwards;
+        }
+
+        @keyframes load {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        .heroT>h2 {
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: fit-content;
+
+            font-size: 7em;
+            font-weight: 600;
+            color: #9dc3f7;
+            background:
+                radial-gradient(2em 2em at 50% 50%,
+                    transparent calc(var(--p) - 2em),
+                    #fff calc(var(--p) - 1em),
+                    #fff calc(var(--p) - 0.4em),
+                    transparent var(--p)),
+                linear-gradient(0deg, #bad1f1 30%, #9dc3f7 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 2px 16px rgba(174, 207, 242, .24);
+
+            --p: 0%;
+            transition: --p 3s linear;
+
+            animation: pulse 10s linear 1.2s infinite;
+        }
+
+        .heroT h2:nth-child(2) {
+            background:
+                radial-gradient(2em 2em at 50% 50%,
+                    transparent calc(var(--p) - 2em),
+                    transparent calc(var(--p) - 1em),
+                    #fff calc(var(--p) - 1em),
+                    #fff calc(var(--p) - 0.4em),
+                    transparent calc(var(--p) - 0.4em),
+                    transparent var(--p));
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            filter: blur(16px) opacity(0.4);
+        }
     </style>
 </head>
 
@@ -357,4 +512,4 @@
     </div>
 </body>
 
-</html> 
+</html>
