--- a/index.html
+++ b/index.html
@@ -445,6 +445,189 @@
             -webkit-text-fill-color: transparent;
             filter: blur(16px) opacity(0.4);
         }
+
+        @keyframes pulse {
+            0% {
+                --p: 0%;
+            }
+
+            50% {
+                --p: 300%;
+            }
+
+            100% {
+                --p: 300%;
+            }
+        }
+
+        @property --p {
+            syntax: '<percentage>';
+            inherits: false;
+            initial-value: 0%;
+        }
+
+        .heroP {
+            font-size: 1.2em;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 20.6em;
+            margin: auto;
+            height: fit-content;
+            width: fit-content;
+            text-align: center;
+            opacity: 0;
+            translate: 0 1em;
+            animation: load 2s ease-out 2s forwards, up 1.4s ease-out 2s forwards;
+            color: #d8ecf8;
+            text-shadow: 0 2px 16px rgba(174, 207, 242, .24);
+            background: linear-gradient(0deg, #d8ecf8 0, #98c0ef 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        @keyframes up {
+            100% {
+                translate: 0;
+            }
+        }
+
+        .heroSubP {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 13em;
+            margin: auto;
+            height: fit-content;
+            opacity: 0;
+            translate: 0 -1em;
+            animation: load3 2s ease-in 0s forwards, up 1.4s ease-out 0s forwards;
+        }
+
+        @keyframes load3 {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 0.7;
+            }
+        }
+
+        .heroSubP p {
+            font-size: 1em;
+            position: relative;
+            width: fit-content;
+            margin: auto;
+            color: #d8ecf8;
+            text-shadow: 0 2px 16px rgba(174, 207, 242, .24);
+            background: linear-gradient(0deg, #d8ecf8 0, #98c0ef 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .heroSubP p::before,
+        .heroSubP p::after {
+            position: absolute;
+            top: 60%;
+            display: block;
+            content: '';
+            width: 5em;
+            height: 1px;
+            opacity: 0;
+            animation: load2 1.4s ease-in-out 0s forwards, up 1.4s ease-out 0s forwards;
+        }
+
+        @keyframes load2 {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 0.3;
+            }
+        }
+
+        .heroSubP p::before {
+            background: linear-gradient(-90deg, #9dc3f7 0%, transparent 100%);
+            right: 120%;
+            translate: -5em 0;
+        }
+
+        .heroSubP p::after {
+            background: linear-gradient(90deg, #9dc3f7 0%, transparent 100%);
+            left: 120%;
+            translate: 5em 0;
+        }
+
+        .accent-lines {
+            pointer-events: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 42em;
+            z-index: -2;
+            --accent-lines-clr: rgba(186, 215, 247, .18);
+        }
+
+        .accent-lines>div {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            margin: auto;
+            height: 100%;
+            width: 100%;
+        }
+
+        .accent-lines>div:nth-child(1)>div {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            margin: auto;
+            width: 100%;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, var(--accent-lines-clr), transparent);
+            opacity: 0;
+            scale: 0;
+            animation: accentload 2s ease-out 2.4s forwards;
+        }
+
+        .accent-lines>div:nth-child(1)>div:nth-child(1) {
+            top: 6em;
+        }
+
+        .accent-lines>div:nth-child(1)>div:nth-child(2) {
+            top: 11em;
+        }
+
+        .accent-lines>div:nth-child(1)>div:nth-child(3) {
+            top: 16em;
+        }
+
+        .accent-lines>div:nth-child(1)>div:nth-child(4) {
+            top: 24em;
+        }
+
+        .accent-lines>div:nth-child(1)>div:nth-child(5) {
+            top: 29em;
+        }
+
+        .accent-lines>div:nth-child(2)>div {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            margin: auto;
+            width: 1px;
+            height: 100%;
+            background: var(--accent-lines-clr);
+        }
     </style>
 </head>
 
