--- a/index.html
+++ b/index.html
@@ -814,6 +814,191 @@
             height: 10em;
             pointer-events: none;
         }
+
+        .mountains::before {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 500%;
+            position: absolute;
+            top: 0%;
+            background: linear-gradient(90deg, #121521 0%, transparent 50%);
+            background: linear-gradient(0deg, #121521 80%, transparent 90%);
+            z-index: 2;
+        }
+
+        .mountains>div {
+            box-shadow:
+                -1em -0.2em 0.4em -1.1em #c2ccff,
+                inset 0em 0em 0em 2px #c2ccff,
+                inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
+                inset 10.2em 10.3em 2em -10em #d4e6ff2f;
+            background: #121521;
+            z-index: 1;
+            filter: brightness(0.8);
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 20em;
+            height: 20em;
+            rotate: 45deg;
+        }
+
+        .mountains>div:nth-child(1) {
+            bottom: -240%;
+            translate: -6em 2em;
+            animation: mountainload1 2s ease-out 2.4s forwards;
+        }
+
+        .mountains>div:nth-child(2) {
+            bottom: -240%;
+            translate: -2em 0em;
+            width: 14em;
+            height: 20em;
+            animation: mountainload2 2s ease-out 2.2s forwards;
+        }
+
+        .mountains>div:nth-child(3) {
+            bottom: -240%;
+            translate: 6em 3em;
+            animation: mountainload1 2s ease-out 2s forwards;
+        }
+
+        @keyframes mountainload1 {
+            0% {
+                bottom: -240%;
+            }
+
+            100% {
+                bottom: -140%;
+            }
+        }
+
+        @keyframes mountainload2 {
+            0% {
+                bottom: -240%;
+            }
+
+            100% {
+                bottom: -108%;
+            }
+        }
+
+        .mountains>div::before {
+            content: '';
+            display: block;
+            background: repeating-radial-gradient(at 100% 100%, transparent 0%, #c2ccff22 2px, transparent 4px);
+            width: 12em;
+            height: 12em;
+            position: absolute;
+            left: 0;
+            top: 0;
+            border-bottom-right-radius: 100%;
+        }
+
+        .hero-spacer {
+            height: 40em;
+            pointer-events: none;
+        }
+
+        .content-section {
+            position: relative;
+            z-index: 1112;
+            color: #fff;
+            width: 100%;
+            text-align: center;
+            padding: 16em 0 12em 0;
+            overflow: hidden;
+        }
+
+        .content-section p.subt {
+            color: #d8ecf8be;
+            font-size: 0.8em;
+            font-weight: 200;
+            position: relative;
+            width: fit-content;
+            margin: auto;
+        }
+
+        .content-section h3 {
+            margin: 0.4em 0 0.6em 0;
+            font-size: 2.3em;
+            font-weight: 600;
+            color: #d8ecf8;
+            text-shadow: 0 2px 16px rgba(174, 207, 242, .24);
+            background: linear-gradient(0deg, #d8ecf8 0, #98c0ef 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .content-section p.subp {
+            color: #d8ecf8be;
+            font-size: 1em;
+            font-weight: 400;
+            max-width: 26em;
+            margin: auto;
+        }
+
+        .content-section p.subt::before,
+        .content-section p.subt::after {
+            position: absolute;
+            top: 60%;
+            display: block;
+            content: '';
+            width: 5em;
+            height: 1px;
+            opacity: 0.5;
+        }
+
+        .content-section p.subt::before {
+            background: linear-gradient(-90deg, #9dc3f7 0%, transparent 100%);
+            right: 120%;
+            top: 50%;
+        }
+
+        .content-section p.subt::after {
+            background: linear-gradient(90deg, #9dc3f7 0%, transparent 100%);
+            left: 120%;
+            top: 50%;
+        }
+
+        .content-section .content-acc {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 25%;
+            margin: auto;
+            display: flex;
+            justify-content: center;
+        }
+
+        .content-section .content-acc div {
+            width: 10em;
+            height: 10em;
+            border-radius: 50%;
+            box-shadow:
+                -1em -0.2em 0.4em -1.1em #c2ccff,
+                inset 0em 0em 0em 2px #c2ccff,
+                inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
+                inset -1.2em 2.3em 2em -0.5em #d4e6ff2f;
+            background: #121521;
+            z-index: 1;
+            filter: brightness(0.8);
+            background: repeating-radial-gradient(at 50% 50%, transparent 0%, #c2ccff22 2px, transparent 4px);
+            translate: -18em;
+        }
+
+        .content-section .content-acc div:nth-child(2) {
+            translate: 18em 12em;
+            border-radius: 2em;
+            box-shadow:
+                -1em -0.2em 0.4em -1.1em #c2ccff,
+                inset 0em 0em 0em 2px #c2ccff,
+                inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
+                inset 10.8em 11.3em 2em -10.5em #d4e6ff2f;
+        }
     </style>
 </head>
 
